force-app/main/default/objects/Player_Achievement__c/Player_Achievement__c.object-meta.xml
<CustomObject>
    <description>Awarded achievement record.</description>
    <label>Player Achievement</label>
    <nameField>
        <label>Player Achievement Name</label>
        <displayFormat>{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Achievements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>