force-app/main/default/objects/Player_Achievement__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <label>Achievement</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Achievement__c</referenceTo>
    <relationshipName>Awards</relationshipName>
    <relationshipLabel>Achievement</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>