force-app/main/default/objects/Player_Achievement__c/fields/Awarded_At__c.field-meta.xml
<CustomField>
    <fullName>Awarded_At__c</fullName>
    <label>Awarded At</label>
    <type>DateTime</type>
</CustomField>