force-app/main/default/objects/Player_Achievement__c/fields/Game_Session__c.field-meta.xml
<CustomField>
    <fullName>Game_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Session</label>
    <referenceTo>Game_Session__c</referenceTo>
    <relationshipLabel>Game Session</relationshipLabel>
    <relationshipName>Achievements_Awarded</relationshipName>
    <type>Lookup</type>
</CustomField>